--- a/templates/items.html
+++ b/templates/items.html
@@ -6,18 +6,17 @@
 			{% for catalog in catalogs %}
 			<a href="{{ url_for('showCatalogItems', name=catalog.catalogName)}}">
 				<h3 class="list-group-item">{{ catalog.catalogName }}</h3>
+				{% endfor %}
 			</a>
-			{% endfor %}
 		</div>
 
 		<div class="col-sm-8 latest-item list-group">
-			<h2>latest-item</h2>
+			<h2>{{ selected_catalog.catalogName }} ({{ items | length }} coins)</h2>
 			{% for item in items%}
-			<h2 class="list-group-item">
-				{{ item.itemName }} ({{ item.catalogName }})
-			</h2>
+			<h2 class="list-group-item">{{ item.itemName }}</h2>
 			{% endfor %}
 		</div>
 	</div>
 </div>
-{% endblock %}
+
+{% endblock%}
