--- a/templates/items.html
+++ b/templates/items.html
@@ -2,7 +2,7 @@
 <div class="catalog-container">
 	<div class="row">
 		<div class="col-sm-3 catalog-list list-group">
-			<h2>Categeries</h2>
+			<a href="{{ url_for('showCatalog') }}"><h2>Categeries</h2></a>
 			{% for catalog in catalogs %}
 			<a href="{{ url_for('showCatalogItems', name=catalog.catalogName)}}">
 				<h3 class="list-group-item">{{ catalog.catalogName }}</h3>
@@ -13,7 +13,11 @@
 		<div class="col-sm-8 latest-item list-group">
 			<h2>{{ selected_catalog.catalogName }} ({{ items | length }} coins)</h2>
 			{% for item in items%}
-			<h2 class="list-group-item">{{ item.itemName }}</h2>
+			<a
+				href="{{url_for('showItemName', catalogName=selected_catalog.catalogName, itemName=item.itemName)}}"
+			>
+				<h2 class="list-group-item">{{ item.itemName }}</h2>
+			</a>
 			{% endfor %}
 		</div>
 	</div>
