--- a/templates/item.html
+++ b/templates/item.html
@@ -6,10 +6,16 @@
 <a
 	class="btn btn-primary mb2"
 	role="button"
-	href="{{ url_for('editItem',catalogName=catalog.catalogName) }}"
+	href="{{ url_for('editItem',catalogName=catalog.catalogName, itemName=item.itemName) }}"
 >
 	Edit</a
 >
-<button type="submit" class="btn btn-primary mb-2">Delete</button>
+<a
+	href="{{
+		url_for('deleteItem', catalogName=catalog.catalogName, itemName=item.itemName)
+	}}"
+>
+	<button class="btn btn-primary mb-2">Delete</button>
+</a>
 
 {% endblock%}
