added header for each page

--- a/templates/deleteItem.html
+++ b/templates/deleteItem.html
@@ -1,4 +1,4 @@
-{% extends "main.html" %} {% block content %}
+{% extends "main.html" %}{% include "header.html" %} {% block content %}
 
 <h2>Are you sure you want to delete {{ item.itemName }}</h2>
 
