--- a/templates/item.html
+++ b/templates/item.html
@@ -1,4 +1,4 @@
-{% extends "main.html" %} {% block content %}
+{% extends "main.html" %} {% include "header.html" %}{% block content %}
 <h2>{{ item.itemName }}</h2>
 
 <p>{{ item.description }}</p>
