--- a/templates/items.html
+++ b/templates/items.html
@@ -1,4 +1,4 @@
-{% extends "main.html" %} {% block content %}
+{% extends "main.html" %} {% include "header.html" %}{% block content %}
 <div class="catalog-container">
 	<div class="row">
 		<div class="col-sm-3 catalog-list list-group">
