--- a/templates/newItem.html
+++ b/templates/newItem.html
@@ -1,4 +1,4 @@
-{% extends "main.html" %} {% block content %}
+{% extends "main.html" %} {% include "header.html" %}{% block content %}
 
 <h1>Add Item</h1>
 
