--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,5 +1,17 @@
 {% extends "main.html" %} {% include "header.html" %} {% block content %}
 <div class="catalog-container">
+	<div class="flash">
+		{% with messages = get_flashed_messages() %} {% if messages %}
+
+		<ul>
+			{% for message in messages %}
+			<li>
+				<strong> {{ message }} </strong>
+			</li>
+			{% endfor %}
+		</ul>
+		{% endif %} {% endwith %}
+	</div>
 	<div class="row">
 		<div class="col-sm-3 catalog-list list-group">
 			<h2>Categeries</h2>
