--- a/templates/header.html
+++ b/templates/header.html
@@ -6,6 +6,12 @@
 		</a>
 	</div>
 	<div class="col-md-6 text-right">
-		<p>Login Link will go Here</p>
+		<a class="btn btn-primary" role="button" href="{{ url_for('login') }}">
+			Log In</a
+		>
+
+		<a class="btn btn-primary" role="button" href="{{ url_for('login') }}">
+			Log Out</a
+		>
 	</div>
 </div>
