--- a/templates/header.html
+++ b/templates/header.html
@@ -10,7 +10,11 @@
 			Log In</a
 		>
 
-		<a class="btn btn-primary" role="button" href="{{ url_for('login') }}">
+		<a
+			class="btn btn-primary"
+			role="button"
+			href="{{ url_for('gdisconnect') }}"
+		>
 			Log Out</a
 		>
 	</div>
