added local permission system

--- a/templates/header.html
+++ b/templates/header.html
@@ -18,6 +18,7 @@
 			Log Out</a
 		>
 
-		{% if 'username' in session %} {{ session["username"] }}{%endif%}
+		{% if 'username' in session %} {{ session["username"] }}
+		{{ session["user_id"] }} {{ session["email"] }}{%endif%}
 	</div>
 </div>
