--- a/templates/editItem.html
+++ b/templates/editItem.html
@@ -11,6 +11,7 @@
 			value="{{ item.itemName }}"
 			id="ControlInput1"
 			placeholder="Coin Name"
+			required
 		/>
 	</div>
 	<div class="form-group">
@@ -21,6 +22,7 @@
 			value="{{ item.description }}"
 			id="ControlInput2"
 			placeholder="Description"
+			required
 		/>
 	</div>
 	<div class="form-group">
