--- a/templates/newItem.html
+++ b/templates/newItem.html
@@ -10,6 +10,7 @@
 			id="ControlInput1"
 			name="coinname"
 			placeholder="Coin Name"
+			required
 		/>
 	</div>
 	<div class="form-group">
@@ -19,6 +20,7 @@
 			id="ControlInput2"
 			name="description"
 			placeholder="Description"
+			required
 		/>
 	</div>
 	<div class="form-group">
